--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Worthy | Free Powerful Theme by HtmlCoder</title>
-		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
+		<title>MEN TRAVEL</title>
+		<meta name="description" content="MEN TRAVEL">
 		<meta name="author" content="htmlcoder.me">
 
 		<!-- Mobile Meta -->
@@ -28,7 +28,7 @@
 		<!-- Plugins -->
 		<link href="css/animations.css" rel="stylesheet">
 
-		<!-- Worthy core CSS file -->
+		<!-- MEN TRAVEL core CSS file -->
 		<link href="css/style.css" rel="stylesheet">
 
 		<!-- Custom css --> 
@@ -53,13 +53,13 @@
 
 							<!-- logo -->
 							<div class="logo smooth-scroll">
-								<a href="#banner"><img id="logo" src="images/logo.png" alt="Worthy"></a>
+								<a href="#banner"><img id="logo" src="images/logo.png" alt="MEN TRAVEL"></a>
 							</div>
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
-								<div class="site-name"><a href="#banner">Worthy</a></div>
-								<div class="site-slogan">Free Bootstrap Theme by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a></div>
+								<div class="site-name"><a href="#banner">MEN TRAVEL</a></div>
+								<div class="site-slogan">Une autre vision du <a target="_blank" href="./">Voyage</a></div>
 							</div>
 
 						</div>
@@ -94,12 +94,12 @@
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li class="active"><a href="#banner">Home</a></li>
-												<li><a href="#about">About</a></li>
+												<li class="active"><a href="#banner">Aceuil</a></li>
+												<li><a href="#about">A Propos</a></li>
 												<li><a href="#services">Services</a></li>
-												<li><a href="#portfolio">Portfolio</a></li>
-												<li><a href="#clients">Clients</a></li>
-												<li><a href="#contact">Contact</a></li>
+												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
+												<li><a href="#clients">Témoignage Clients</a></li>
+												<li><a href="#contact">Contactez Nous</a></li>
 											</ul>
 										</div>
 
@@ -127,8 +127,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<h1 class="text-center">We are <span>Worthy</span></h1>
-							<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos debitis provident nulla illum minus enim praesentium repellendus ullam cupiditate reiciendis optio voluptatem, recusandae nobis quis aperiam, sapiente libero ut at.</p>
+							<h1 class="text-center">MEN <span>TRAVEL</span></h1>
+							<p class="lead text-center">MEN TRAVEL est une agence de voyage VIP Dla-Yde-Dla, qui vous offre une autre vision du voyage. 
+								Située à Douala, Bonamoussadi et à Yaoundé, Bastos.</p>
 						</div>
 					</div>
 				</div>
@@ -142,20 +143,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1 id="about" class="title text-center">About <span>Worthy</span></h1>
-						<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta officia, aspernatur.</p>
+						<h1 id="A Propos" class="title text-center">A Propos <span>MEN TRAVEL</span></h1>
+						<p class="lead text-center">Une agence de voyage VIP Dla-Yde-Dla, qui vous offre une autre vision du voyage.</p>
 						<div class="space"></div>
 						<div class="row">
 							<div class="col-md-6">
-								<img src="images/section-image-1.png" alt="">
+								<img width="100%" src="https://www.pngitem.com/pimgs/m/65-658849_treinador-nibus-frias-nibus-modernos-autocar-bus-png.png" alt="">
 								<div class="space"></div>
 							</div>
 							<div class="col-md-6">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
+								<p>une agence de voyage VIP Dla-Yde-Dla, qui vous offre une autre vision du voyage. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
 								<ul class="list-unstyled">
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Lorem ipsum dolor sit amet</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Reiciendis deleniti neque aliquid</li>
+									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Meilleur Chauffeur</li>
+									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Nouveau Bus Comfortable</li>
 									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Ipsam fuga error commodi</li>
 									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Lorem ipsum dolor sit amet</li>
 									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Dignissimos molestiae necessitatibus</li>
@@ -163,7 +164,7 @@
 							</div>
 						</div>
 						<div class="space"></div>
-						<h2>Becessitatibus quae beatae possimus ullam</h2>
+						<h2>Pour quoi choisir MEN TRAVEL</h2>
 						<div class="row">
 							<div class="col-md-6">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
@@ -176,7 +177,7 @@
 										<div class="panel-heading" role="tab" id="headingOne">
 											<h4 class="panel-title">
 												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-													Collapsible Group Item #1
+													Notre Visions
 												</a>
 											</h4>
 										</div>
@@ -190,7 +191,7 @@
 										<div class="panel-heading" role="tab" id="headingTwo">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-													Collapsible Group Item #2
+													Notre Mission
 												</a>
 											</h4>
 										</div>
@@ -204,7 +205,7 @@
 										<div class="panel-heading" role="tab" id="headingThree">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-													Collapsible Group Item #3
+													Nos valeurs
 												</a>
 											</h4>
 										</div>
@@ -227,7 +228,7 @@
 		<!-- ================ -->
 		<div class="section translucent-bg bg-image-1 blue">
 			<div class="container object-non-visible" data-animation-effect="fadeIn">
-				<h1 id="services"  class="text-center title">Worthy Services</h1>
+				<h1 id="services"  class="text-center title">MEN TRAVEL Services</h1>
 				<div class="space"></div>
 				<div class="row">
 					<div class="col-sm-6">
@@ -1055,7 +1056,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">Copyright © 2014 Worthy by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>.</p>
+							<p class="text-center">Copyright © 2014 MEN TRAVEL by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>.</p>
 						</div>
 					</div>
 				</div>
