--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 							<h1 class="text-center">MEN <span>TRAVEL</span></h1>
 							<p class="lead text-center">MEN TRAVEL est une agence de voyage VIP Dla-Yde-Dla, qui vous offre une autre vision du voyage. 
 								Située à Douala, Bonamoussadi et à Yaoundé, Bastos.</p>
+								<a class="btn border rounded btn-lg btn-primary btn-block" href="/">Faire une réservation</a>
 						</div>
 					</div>
 				</div>
