--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li class="active"><a href="#banner">Acceuil</a></li>
+												<li class="active"><a href="#banner">Accueil</a></li>
 												<li><a href="#about">A Propos</a></li>
 												<li><a href="#">Voyage & réservation</a></li>
 												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
